# Embedded-cmk

./: BuildOptions.cmake  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
arch/aarch64/: CMakeLists.txt
arch/x86_64/: CMakeLists.txt
cmake/: CheckAndApplyFlags.cmake
cmake/analysis/: cppcheck.cmake
cmake/linker/: DefaultLinkerSettings.cmake
cmake/test/: cmocka.cmake
cmake/toolchains/: nrf52840.cmake
cmake/toolchains/cross/: cortex-m3.cmake  cortex-m4_hardfloat.cmake  cortex-m7_hardfloat.cmake
cmake/toolchains/native/: gcc-7.cmake  gcc-8.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt
